# openCL_toolbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/openCL_toolbox/: openCL_computeIntersections.cpp  openCL_computeIntersections.h  openCL_params.cpp  openCL_params.h  openCL_util.cpp  openCL_util.h
include/openCL_toolbox/rayMeshIntersections/: kernel_computeIntersections.cl  openCL_rayMeshIntersections.cpp  openCL_rayMeshIntersections.h
meshes/: bunny.ply
